--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
+    "@next/font": "^13.4.3",
+    "@types/antd": "^1.0.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-system": "^5.1.16",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.0-rc.1",
+    "styled-system": "^5.1.5",
     "typescript": "5.0.4"
   }
 }
