--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@types/react-dom": "18.2.4",
     "@types/styled-components": "^5.1.26",
     "@types/styled-system": "^5.1.16",
+    "@types/swiper": "^6.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.1",
+    "styled-components": "^5.3.10",
     "styled-system": "^5.1.5",
+    "swiper": "^9.3.2",
     "typescript": "5.0.4"
   }
 }
