--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
+    "node-telegram-bot-api": "^0.61.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.10",
     "styled-system": "^5.1.5",
     "swiper": "^9.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.61.6"
   }
 }
