--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/swiper": "^6.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
+    "mongoose": "^7.4.0",
     "next": "13.4.3",
     "node-telegram-bot-api": "^0.61.0",
     "react": "18.2.0",
