--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "node-telegram-bot-api": "^0.61.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.5",
+    "styled-components": "^5.3.6",
     "styled-system": "^5.1.5",
     "swiper": "^9.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.61.6"
+  },
+  "resolutions": {
+    "clean-tag": "1.0.3"
   }
 }
