--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/swiper": "^6.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
+    "hamburger-react": "^2.5.0",
     "mongoose": "^7.0.4",
     "next": "13.4.3",
     "node-telegram-bot-api": "^0.61.0",
